language update  refs #3430

--- a/lang/da.json
+++ b/lang/da.json
@@ -144,6 +144,7 @@
         "LogoNotWriteableInstruction": "Hvis du vil bruge din brugerdefinerede logo i stedet for standard Piwik logoet, giver skriverettigheder til denne mappe: %1$s Piwik brug skriveadgang til dine logoer gemt i filer %2$s.",
         "LogoUpload": "Vælg et logo til overførelse",
         "LogoUploadHelp": "Overfør en fil i %s formater med en højde på mindst %s pixels.",
+        "MenuDevelopment": "Udvikling",
         "MenuDiagnostic": "Diagnosticering",
         "MenuGeneralSettings": "Generelle indstillinger",
         "MenuManage": "Administrere",
@@ -1257,6 +1258,7 @@
         "HowtoLoginAnonymous": "Efterlad brugernavn og kodeord tomt for anonym log ind",
         "HttpIsNotSecureWarning": "Piwik tilladelse token (token_auth) sendes i klar tekst, hvis der bruges \"HTTP\". Af denne grund anbefales HTTPS til sikker transport af data over internettet. Vil du fortsætte?",
         "HttpTimeout": "HTTP Timeout",
+        "IgnoreSslError": "Ignorer SSL fejl",
         "IncompatiblePiwikVersion": "Piwik versionen er uforenelig med Piwik mobil 2 Opdater Piwik og prøv igen eller installer Piwik Mobile 1",
         "LastUpdated": "Sidst opdateret: %s",
         "LoadingReport": "Indlæser %s",
@@ -1277,6 +1279,8 @@
         "NoVisitorsShort": "Ingen besøgende",
         "NoWebsiteFound": "Ingen hjemmesider fundet",
         "NoWebsitesShort": "Ingen websteder",
+        "PossibleSslError": "Mulig SSL certifikat fejl",
+        "PossibleSslErrorExplanation": "Der opstod en fejl, som kan skyldes et ugyldigt eller selvsigneret certifikat: \"%s\". Log ind virker måske, selvom SSL validering ignoreres, men det er mindre sikker. SSL validering kan til enhver tid ændres i indstillingerne.",
         "PullDownToRefresh": "Træk ned for at opdatere...",
         "RatingDontRemindMe": "Påmind mig ikke",
         "RatingNotNow": "Senere",
