--- a/lang/el.json
+++ b/lang/el.json
@@ -143,6 +143,7 @@
         "LogoNotWriteableInstruction": "Για να χρησιμοποιήσετε το δικό σας λογότυπο αντί του προκαθορισμένου του Piwik, δώστε δικαίωμα εγγραφής σε αυτό τον κατάλογο: %1$s Το Piwik πρέπει να έχει δικαίωμα εγγραφής στα λογότυπά σας που είναι αποθηκευμένα στα αρχεία %2$s.",
         "LogoUpload": "Επιλέξτε ένα Λογότυπο για αποστολή",
         "LogoUploadHelp": "Παρακαλούμε ανεβάστε ένα αρχείο σε μορφή %s με ελάχιστο ύψος %s pixel.",
+        "MenuDevelopment": "Ανάπτυξη",
         "MenuDiagnostic": "Διαγνωστικά",
         "MenuGeneralSettings": "Γενικές ρυθμίσεις",
         "MenuManage": "Διαχείριση",
@@ -1255,6 +1256,7 @@
         "HowtoLoginAnonymous": "Αφήστε κενά το όνομα χρήστη και το συνθηματικό για είσοδο ανώνυμου χρήστη",
         "HttpIsNotSecureWarning": "Το τεκμήριο πιστοποίησης του Piwik (token_auth) αποστέλλεται ως απλό κείμενο αν χρησιμοποιείτε «HTTP». Για αυτό το λόγο, σας προτείνουμε το HTTPS για ασφαλή μεταφορά δεδομένων στο διαδίκτυο. Θέλετε να συνεχίσετε;",
         "HttpTimeout": "Χρόνος λήξης HTTP",
+        "IgnoreSslError": "Αγνόηση του σφάλματος SSL",
         "IncompatiblePiwikVersion": "Η έκδοση του Piwik που χρησιμοποιείτε δεν είναι συμβατή με το Piwik Mobile 2. Ενημερώστε την εγκατάσταση του Piwik και ξαναδοκιμάστε ή διαφορετικά εγκατατήστε το Piwik Mobile 1.",
         "LastUpdated": "Τελευταία ενημέρωση: %s",
         "LoadingReport": "Φόρτωση του %s",
@@ -1275,6 +1277,8 @@
         "NoVisitorsShort": "Δεν υπάρχουν επισκέπτες",
         "NoWebsiteFound": "Δεν βρέθηκε ιστσσελίδα",
         "NoWebsitesShort": "Δεν υπάρχουν ιστότοποι",
+        "PossibleSslError": "Πιθανό σφάλμα πιστοποιητικού SSL",
+        "PossibleSslErrorExplanation": "Υπήρξε σφάλμα που μπορεί να προήλθε από μη έγκυρο ή υπογεγραμμένο από την ίδια οντότητα πιστοποιητικό: \"%s\". Η είσοδος μπορεί να δουλέψει για εσάς αν αγνοήστε την επαλήθευση SSL, αλλά είναι λιγότερο ασφαλής. Μπορείτε να αλλάξετε ανά πάσα στιγμή την επιλογή για την επαλήθευση SSL στις ρυθμίσεις.",
         "PullDownToRefresh": "Κατεβείτε για ανανέωση...",
         "RatingDontRemindMe": "Χωρίς υπενθύμιση",
         "RatingNotNow": "Όχι τώρα",
