--- a/lang/ru.json
+++ b/lang/ru.json
@@ -138,6 +138,7 @@
         "LatestStableRelease": "Последнюю стабильную версию",
         "LogoUpload": "Выберите лого для загрузки",
         "LogoUploadHelp": "Пожалуйста, закачивайте файлы в %s форматах, минимальное ограничение по высоте – %s пикселей.",
+        "MenuDevelopment": "Разработка",
         "MenuDiagnostic": "Диагностика",
         "MenuGeneralSettings": "Основные настройки",
         "MenuManage": "Управление",
@@ -180,6 +181,7 @@
         "DonateCall3": "Если вы думаете, что Piwik добавил существенное значение для вашего бизнеса или деятельности, %1$sпожалуйста, сделайте пожертвование!%2$s",
         "DonateFormInstructions": "Выберите ползунком нужную сумму, а затем нажмите Subscribe для пожертвования и подписки.",
         "ExcludeRowsWithLowPopulation": "Все строки отображены %s Кроме низких показателей",
+        "ExternalHelp": "Помощь (откроется в новой вкладке)",
         "FlattenDataTable": "Отчет построен по иерархии %s Сделать его более конкретным",
         "HowMuchIsPiwikWorth": "Определите стоимость Piwik для вас",
         "IncludeRowsWithLowPopulation": "Строки с низкими показателями отображены %s Показать все",
@@ -194,6 +196,7 @@
         "MakeADifference": "Внесите свой вклад: %1$sПожертвуйте сейчас%2$s для финансирования Piwik 2.0!",
         "MakeOneTimeDonation": "Сделать только пожертвование (без подписки).",
         "NoPrivilegesAskPiwikAdmin": "Вы авторизованы как '%s', но, кажется, для вас не установлены права в Piwik. %s Попросите вашего администратора (кликните, чтобы написать письмо)%s дать вам доступ на \"просмотр\" к статистике сайта.",
+        "OnlyForSuperUserAccess": "Этот виджет отображается только у супер-пользователей",
         "PageOf": "%1$s из %2$s",
         "PeriodDay": "День",
         "PeriodDays": "дней",
@@ -264,6 +267,8 @@
         "LastUpdated": "Последнее обновление",
         "LicenseHomepage": "Дом. страница лицензии",
         "MainDescription": "Плагины расширяют функциональность Piwik. После установки плагина Вы можете активировать или деактивировать его здесь.",
+        "Marketplace": "Маркет",
+        "MarketplaceSellPluginSubject": "Маркет - Продать плагин",
         "MenuPlatform": "Платформа",
         "MissingRequirementsNotice": "Пожалуйста, обновите %1$s %2$s до более новой версии, необходима версия %1$s %3$s.",
         "NoPluginsFound": "Плагины не найдены",
@@ -337,6 +342,7 @@
         "ExceptionArchiveEmpty": "Пустой архив.",
         "ExceptionArchiveIncompatible": "Несовместимый архив: %s",
         "ExceptionArchiveIncomplete": "Архив поврежден: некоторые файлы отсутствуют (например, %s).",
+        "FeedbackRequest": "Не стесняйтесь поделиться вашими идеями и предложениями с командой Piwik здесь:",
         "HelpMessageContent": "Проверьте %1$s Piwik FAQ %2$s, в котором объясняется большинство известных ошибок, которые могут случится во время обновления. %3$s Обратитесь к системному администратору - он может помочь Вам с решением проблемы на сервере или с настройками MySQL.",
         "HelpMessageIntroductionWhenError": "Выше подается код ошибки ядра системы. Он поможет Вам объяснить причину ошибки, но если же Вам необходима дополнительная помощь, пожалуйста:",
         "HelpMessageIntroductionWhenWarning": "Обновление завершено успешно, однако в процессе возникло несколько предупреждений. Пожалуйста, прочтите примечания ниже. Для дополнительной помощи:",
@@ -347,12 +353,15 @@
         "NoteItIsExpectedThatQueriesFail": "Замечание: если вы вручную выполните эти запросы, возможно, некоторые из них также завершатся неудачей. В таких случаях, просто проигнорируйте ошибки, и выполняйте запросы далее по списку.",
         "NotificationClickToUpdatePlugins": "Для обновления плагинов, нажмите сюда:",
         "NotificationClickToUpdateThemes": "Для обновления тем нажмите сюда:",
+        "NotificationSubjectAvailableCoreUpdate": "Доступна новая версия Piwik %s",
+        "NotificationSubjectAvailablePluginUpdate": "Доступны обновления плагинов Piwik",
         "PiwikHasBeenSuccessfullyUpgraded": "Piwik успешно обновлен!",
         "PiwikUpdatedSuccessfully": "Piwik обновлен успешно!",
         "PiwikWillBeUpgradedFromVersionXToVersionY": "База веб-аналитики будет обновлена с версии %1$s до версии %2$s.",
         "PluginDescription": "Механизм обновления Piwik",
         "ReadyToGo": "Готовы?",
         "TheFollowingPluginsWillBeUpgradedX": "Следующие плагины будут обновлены: %s.",
+        "ThereIsNewPluginVersionAvailableForUpdate": "Некоторые плагины были обновлены с Маркета:",
         "ThereIsNewVersionAvailableForUpdate": "Доступна новая версия Piwik",
         "TheUpgradeProcessMayFailExecuteCommand": "Если у вас большая база данных Piwik, обновления, запущенные в браузере, могут занять много времени . В данном случае, вы можете выполнить обновление через интерфейс командной строки: %s",
         "TheUpgradeProcessMayTakeAWhilePleaseBePatient": "Обновление базы данных может занять некоторое время, поэтому подождите немного.",
@@ -386,6 +395,7 @@
         "CopyDashboardToUser": "Копировать панель инструментов пользователю",
         "CreateNewDashboard": "Создать новую панель инструментов",
         "Dashboard": "Панель инструментов",
+        "DashboardCopied": "Текущий дащборд успешно скопирован выбраному пользователю.",
         "DashboardEmptyNotification": "Ваша панель инструментов не содержит ни одного виджета. Добавьте какие-нибудь виджеты или просто сбросьте панель инструментов к настройкам по умолчанию.",
         "DashboardName": "Имя панели инструментов:",
         "DashboardOf": "Панель инструментов %s",
@@ -966,8 +976,11 @@
     },
     "Insights": {
         "DayComparedToPreviousDay": "предыдущий день",
+        "DayComparedToPreviousWeek": "тот же день неделей ранее",
+        "DayComparedToPreviousYear": "тот же день в предыдущем году",
         "FilterOnlyNew": "Только новые",
         "MonthComparedToPreviousMonth": "предыдущий месяц",
+        "MonthComparedToPreviousYear": "тот же месяц годом ранее",
         "WeekComparedToPreviousWeek": "предыдущая неделя",
         "YearComparedToPreviousYear": "прошлый год"
     },
@@ -1029,6 +1042,7 @@
         "SystemCheck": "Проверка системы",
         "SystemCheckAutoUpdateHelp": "Учтите: Piwik One Click Update требует прав записи в папку Piwik и в папки компонентов.",
         "SystemCheckCreateFunctionHelp": "Piwik использует анонимные функции для колбэков.",
+        "SystemCheckCronArchiveProcessCLI": "Управление процессами через консоль",
         "SystemCheckDatabaseHelp": "Piwik для своей работы требует модуль mysqli, или оба модуля: PDO и pdo_mysql.",
         "SystemCheckDebugBacktraceHelp": "View::factory не может сгенерировать просмотры для вызвавшего модуля.",
         "SystemCheckError": "Возникла ошибка, которая должна быть исправлена перед продолжением",
